2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b158

	* Change: Better detection of which pubDate to use for RSS feeds

	* Change: Implement canReadRecurse() in search.php - you now
	  cannot search for any album which you can not directly link to
	  from an albums page.

	* Change: Flag 'autoRotated' after manual rotation to prevent this:
	  Use has autorotate disabled.  Uploads a photo.  Manually rotates
	  it to proper orientation.  Later enables autorotate.  Moves photo.
	  ... if autoRotate isn't flagged, the move will cause autorotate to
	  rotate it, even though it was done manually.

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b157

	* Change: Text fix for RSS option in config_data

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b156

	* Change: Add "canReadRecurse" to Album - use canReadRecurse in RSS feed
	  to optimize the "albumFindable" call that was in the original RSS.php

	* Change: Fix casing on getAlbumByName.  More occurances were using the 
	  upper-cased "by" than not, so this is an official correction

2004-05-28  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b155

	* Fix: Removed warning in Config Wizard, when no config.php is there.

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b154

	* Change: Add field "guid" to Album which is used by RSS to
	  determine if an item is new.  The guid is updated with each
	  photo upload.

	* Change: Add extraField "autoRotated" to AlbumItem
	  This field is checked to determine if we have already rotated
	  an item before so that we don't do it again on an item move.

	* Change: album_version was revved to 29 for both of these changes

2004-05-27  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b153

	* Fixed upload (and slideshow) applets when Gallery is embedded in Geeklog.

2004-05-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b152

	* Fix:  Correct URL to rss.php when in embedded mode.  We can't